--- a/nextflow.config
+++ b/nextflow.config
@@ -14,3 +14,9 @@ profiles {
     }
   }
 }
+
+manifest {
+  mainScript = 'qc.nf'
+  description = 'Forked version of lehtiolab/galaxy-workflows for testing'
+  homePage = 'http://tcoffee.crg.cat/apps/ampa/'
+}
